# llmops-for-ai-engineering

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  _split_eval.py  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: evaluator.agent.md  guardian.agent.md  implementer-python.agent.md  implementer-terraform.agent.md  observer.agent.md  planner.agent.md  reviewer-security.agent.md
.github/hooks/: README.md  posttooluse-quality-gates.json  pretooluse-risk-guard.json
.github/instructions/: config.instructions.md  docs.instructions.md  examples.instructions.md  guardrails.instructions.md  llmops.instructions.md  python.instructions.md  scripts.instructions.md  terraform.instructions.md  tests.instructions.md
.github/prompts/: add-guardrail.prompt.md  deploy-check.prompt.md  fix-failure.prompt.md  instrument.prompt.md  qa.prompt.md  trace-debug.prompt.md
.github/skills/evaluate-agent/: SKILL.md
.github/skills/langfuse-tracing/: SKILL.md
.github/skills/prompt-versioning/: SKILL.md
.github/workflows/: prompt-cicd.yml  prompt-production.yml  prompt-staging.yml
.kiro/specs/aws-langfuse-deployment/: design.md  requirements.md  tasks.md
.kiro/specs/standsagent-tools-basicas/: design.md  requirements.md  spec.json  tasks.md
docs/: .instructor_guide.md  README.md  ai-coding-agents-local-security-comparison.md  continue-dev-setup.md  copilot-ollama-security-assessment-banking.md  copilot_sdd_onboarding.md  gitlab-ssh-setup-windows.md  ollama-vscode-setup.md  plan_formativo.md  resumen_curso.md
docs/architecture/: ARCHITECTURE.md  agent_spec.md
docs/deployment/: infraestructura_aws.md
docs/getting-started/: QUICKSTART.md
docs/project/: CONTRIBUTING.md  COPILOT_AGENT_OPERATING_MODEL.md  COPILOT_CUSTOMIZATION_GUIDE.md  COPILOT_SETUP.md  PROJECT_SUMMARY.md
examples/: basic_usage.py
infrastructure/: README.md
infrastructure/config/: aws-config.yaml.example  cloudwatch-agent.json  langfuse-config.yaml.example
infrastructure/docker/: docker-compose.yml
infrastructure/scripts/: backup.sh  config_validator.py  create_guardrail.py  deploy.sh  destroy.sh  env_generator.py  secret_utils.py  ssh-connect.sh
infrastructure/terraform/: cloudwatch.tf  ec2.tf  main.tf  outputs.tf  security-groups.tf  ssm.tf  terraform.tfvars.example  variables.tf  versions.tf  vpc.tf
notebooks/: .env.example  README.md  pyproject.toml  requirements.txt.bak
notebooks/day_1/: 01_setup_agent.ipynb  02_observability.ipynb  03_prompt_management.ipynb
notebooks/day_1/.ipynb_checkpoints/: 01_setup_agent-checkpoint.ipynb  02_observability-checkpoint.ipynb  03_prompt_management-checkpoint.ipynb
notebooks/day_2/: 03_evaluation.ipynb  03_prompt_management.ipynb  04_cicd_gate.ipynb  04_evaluation.ipynb  05_cicd_prompts.ipynb
notebooks/day_3/: 05_guardrails.ipynb  06_full_pipeline.ipynb  06_guardrails.ipynb
prompts/: system_prompt.txt
scripts/: check-ollama.ps1  diagnose-copilot.ps1  setup-continue.ps1
scripts/cicd/: evaluate-prompt.sh  promote-prompt.sh  push-prompt.sh  run-pipeline.sh
slides/: INSTRUCTOR_ACTIVITIES.md  README.md
slides/day_1/: M1_que_es_llmops.md  M2_desarrollo_profesional.md  M2_observabilidad_langfuse.md
slides/day_2/: M3_evaluacion_agentica.md  M3_prompt_management.md  M4_cicd_quality_gate.md  M4_evaluacion_agentica.md  M4_evaluation.md  M5_cicd_prompts.md
slides/day_3/: M5_guardrails_safety.md  M6_cicd_produccion.md  M6_pipeline_produccion.md
src/techshop_agent/: __init__.py  agent.py  config.py  evaluation.py  guardrails.py  responder.py  tools.py
src/techshop_agent/cicd/: evaluate_prompt.py  promote_prompt.py  push_prompt.py
src/techshop_agent/data/: catalog.json  faqs.json
src/techshop_agent/evaluation/: __init__.py  __main__.py  dataset.py  evaluators.py  judge.py  runner.py
src/techshop_agent/solution/: __init__.py  observability.py  prompt_provider.py
streamlit_app/: GUIDE.md  README.md  app.py  app_config.py  pyproject.toml
streamlit_app/.streamlit/: config.toml
tests/: __init__.py  test_agent.py  test_catalog_data.py  test_catalog_tool.py  test_config.py  test_faq_data.py  test_faq_tool.py  test_guardrails.py  test_new_tools.py  test_observability.py  test_prompt_provider.py  test_response_contract.py  test_routing.py
